// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crud operations Create Operation 1`] = `
"{
  \\"name\\": \\"create-my-resource-input\\",
  \\"comments\\": [],
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"Guid\\"
    },
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Create Operation 2`] = `
"{
  \\"name\\": \\"create-my-resource-output\\",
  \\"comments\\": [],
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"type\\",
      \\"shortName\\": \\"t\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Type of record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"version\\",
      \\"shortName\\": \\"v\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Version for record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"created-timestamp\\",
      \\"shortName\\": \\"ct\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was created.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"modified-timestamp\\",
      \\"shortName\\": \\"mt\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was last modified.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Delete Operation 1`] = `
"{
  \\"name\\": \\"get-my-resource-input\\",
  \\"comments\\": [],
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Delete Operation 2`] = `
"{
  \\"name\\": \\"get-my-resource-output\\",
  \\"comments\\": [],
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"type\\",
      \\"shortName\\": \\"t\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Type of record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"version\\",
      \\"shortName\\": \\"v\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Version for record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"created-timestamp\\",
      \\"shortName\\": \\"ct\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was created.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"modified-timestamp\\",
      \\"shortName\\": \\"mt\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was last modified.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Read Operation 1`] = `
"{
  \\"name\\": \\"get-my-resource-input\\",
  \\"comments\\": [],
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Read Operation 2`] = `
"{
  \\"name\\": \\"get-my-resource-output\\",
  \\"comments\\": [],
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"type\\",
      \\"shortName\\": \\"t\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Type of record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"version\\",
      \\"shortName\\": \\"v\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Version for record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"created-timestamp\\",
      \\"shortName\\": \\"ct\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was created.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"modified-timestamp\\",
      \\"shortName\\": \\"mt\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was last modified.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Update Operation 1`] = `
"{
  \\"name\\": \\"get-my-resource-input\\",
  \\"comments\\": [],
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Update Operation 2`] = `
"{
  \\"name\\": \\"get-my-resource-output\\",
  \\"comments\\": [],
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"type\\",
      \\"shortName\\": \\"t\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Type of record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"version\\",
      \\"shortName\\": \\"v\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"Version for record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"created-timestamp\\",
      \\"shortName\\": \\"ct\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was created.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"modified-timestamp\\",
      \\"shortName\\": \\"mt\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was last modified.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;
